--- a/erpnext/templates/includes/cart/cart_address.html
+++ b/erpnext/templates/includes/cart/cart_address.html
@@ -1,5 +1,14 @@
 {% from "erpnext/templates/includes/cart/cart_macros.html" import show_address %}
 <div class="row">
+	<div class="col-sm-6"></div>
+	<div class="col-sm-6">
+		<div class="row checkout">
+			<div class="h6 text-uppercase">{{ _("Wunsch-Lieferdatum:") }}</div>
+			<input class="form-control" type="date" id="wish_deliver_date"
+		</div>
+	</div>
+</div>
+<div class="row">
 	{% if addresses|length == 1%}
 		{% set select_address = True %}
 	{% endif %}
