implemeted price per kg (weight) and L (needs custom field)

--- a/erpnext/templates/generators/item.html
+++ b/erpnext/templates/generators/item.html
@@ -60,7 +60,7 @@
 				<div style="min-height: 100px; margin: 10px 0;">
 					<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
 						<h4 class="item-price" itemprop="price"></h4>
-						<h4 class="text-muted">CHF 2.40/kg</h4>
+						<h4 class="text-muted item-price-unit" itemprop="price-unit"></h4>
 						<div class="item-stock" itemprop="availability"></div>
 					</div>
 					<div class="item-cart hide">
