--- a/erpnext/templates/pages/cart.html
+++ b/erpnext/templates/pages/cart.html
@@ -93,7 +93,7 @@
 			<div class="h6 text-uppercase">{{ _("Liefertermin") }}</div>
 			   <div class="form-group">
 					<div class='input-group date' id='datetimepicker1'>
-						<input type='text' class="form-control" />
+						<input type='date' class="form-control" />
 						<span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
 						</span>
@@ -101,9 +101,11 @@
 				</div>
 			</div>
 			<script type="text/javascript">
+			$(document).ready(function () {
 				$(function () {
 					$('#datetimepicker1').datetimepicker();
 				});
+			});
 			</script>
 		</div>
 		
