removed script for datepicker

--- a/erpnext/templates/pages/cart.html
+++ b/erpnext/templates/pages/cart.html
@@ -92,7 +92,7 @@
 		<div class="col-sm-6 text-right">
 			<div class="h6 text-uppercase">{{ _("Liefertermin") }}</div>
 			   <div class="form-group">
-					<div class='input-group date' id='datetimepicker1'>
+					<div class='input-group date'>
 						<input type='date' class="form-control" />
 						<span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
@@ -100,13 +100,6 @@
 					</div>
 				</div>
 			</div>
-			<script type="text/javascript">
-			$(document).ready(function () {
-				$(function () {
-					$('#datetimepicker1').datetimepicker();
-				});
-			});
-			</script>
 		</div>
 		
 		<div class="col-sm-6 text-right">
