--- a/erpnext/templates/pages/cart.html
+++ b/erpnext/templates/pages/cart.html
@@ -93,7 +93,7 @@
 			<div class="h6 text-uppercase">{{ _("Liefertermin") }}</div>
 			   <div class="form-group">
 					<div class='input-group date'>
-						<input type='date' class="form-control" />
+						<input id="desireddate" type='date' class="form-control" name="desireddate" placeholder="Wunschdatum" />
 						<span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
 						</span>
