hide disabled options from dropdown (#115)

--- a/erpnext/templates/generators/item.html
+++ b/erpnext/templates/generators/item.html
@@ -39,7 +39,7 @@
 						{% if selected_attributes and selected_attributes[d.attribute]==value -%}
 							selected
 						{%- elif disabled_attributes and value in disabled_attributes.get(d.attribute, []) -%}
-							disabled
+							hidden
 						{%- endif %}>
 							{{ _(value) }}
 						</option>
